[build-system]
requires = ["setuptools~=68.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blinkpy"
version = "0.22.7"
license = {text = "MIT"}
description = "A Blink camera Python Library."
readme = "README.rst"
authors = [
    {name = "Kevin Fronczak", email = "kfronczak@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
requires-python = ">=3.9.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Source Code" = "https://github.com/fronzbot/blinkpy"
"Bug Reports" = "https://github.com/fronzbot/blinkpy/issues"

[tool.setuptools]
platforms = ["any"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["blinkpy*"]

[tool.ruff]
lint.select = [
    "C",  # complexity
    "D",  # docstrings
    "E",  # pydocstyle
    "F",  # pyflakes/autoflake
    "G",  # flake8-logging-format
    "N815",  # Varible {name} in class scope should not be mixedCase
    "PGH004",  # Use specific rule codes when using noqa
    "PLC",  # pylint
    "PLE",  # pylint
    "PLR",  # pylint
    "PLW",  # pylint
    "Q000",  # Double quotes found but single quotes preferred
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
    "TRY004",  # Prefer TypeError exception for invalid type
    "B904",  # Use raise from to specify exception cause
    "UP",  # pyupgrade
    "W",  # pycodestyle
]
lint.ignore = [
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
    "D406",  # Section name should end with a newline
    "D407",  # Section name underlining
    "E731",  # do not assign a lambda expression, use a def
    "G004",  # I don't care if logging uses an f string
    "PLC1901",  # Lots of false positives
    # False positives https://github.com/astral-sh/ruff/issues/5386
    "PLC0208",  # Use a sequence type instead of a `set` when iterating over values
    "PLR0911",  # Too many return statements ({returns} > {max_returns})
    "PLR0912",  # Too many branches ({branches} > {max_branches})
    "PLR0913",  # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915",  # Too many statements ({statements} > {max_statements})
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901",  # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "UP006",  # keep type annotation style as is
    "UP007",  # keep type annotation style as is
    "UP015",  # Unnecessary open mode parameters
    "UP017",  # UTC stuff
    # Ignored due to performance: https://github.com/charliermarsh/ruff/issues/2923
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
]

line-length = 88

target-version = "py312"

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.mccabe]
    max-complexity = 25
